# vxv-workspace

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  auth.py  main.py  models.py  orchestrator.py  persistence.py  runtime.py  skill_engine.py  storage.py  store.py  tool_adapters.py
apps/api/tests/: test_api.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css  types.ts
apps/web/src/components/: ConversationPanel.tsx  InspectorPanel.tsx  MarkdownRenderer.tsx  ModuleBoard.tsx  Sidebar.tsx
apps/web/src/lib/: api.ts
